# StarfighterBattlebook

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  vcpkg.json
.github/workflows/: main.yml
include/: CMakeLists.txt  client.hpp  endgame.hpp  game.hpp  joingame.hpp  mainmenu.hpp  msgqueue.hpp  soundmanager.hpp  teamselection.hpp  uicontroller.hpp  version.hpp.in  waitingforplayers.hpp
server/: CMakeLists.txt
server/include/: CMakeLists.txt  battlebook.hpp  connection.hpp  exception.hpp  game.hpp  page.hpp  player.hpp  server.hpp  team.hpp
server/res/: battlebookEmpire.txt  battlebookRebellion.txt
server/src/: CMakeLists.txt  battlebook.cpp  connection.cpp  exception.cpp  game.cpp  main.cpp  page.cpp  player.cpp  server.cpp
src/: CMakeLists.txt  client.cpp  endgame.cpp  game.cpp  joingame.cpp  main.cpp  mainmenu.cpp  soundmanager.cpp  teamselection.cpp  uicontroller.cpp  waitingforplayers.cpp
ui/: CMakeLists.txt
ui/include/: CMakeLists.txt  button.hpp  image.hpp  label.hpp  layout.hpp  textfield.hpp  widget.hpp  window.hpp
ui/src/: CMakeLists.txt  button.cpp  image.cpp  label.cpp  layout.cpp  textfield.cpp  widget.cpp  window.cpp
utils/include/: CMakeLists.txt  utils.hpp
utils/src/: utils.cpp
